--- a/helix/config.toml
+++ b/helix/config.toml
@@ -63,12 +63,13 @@ esc = ["collapse_selection", "keep_primary_selection"]
 C-o = ":open ~/.config/helix/config.toml" # Maps Ctrl-o to opening of the helix config file
 C-r = ":config-reload"
 C-n = ":new"
-C-s =":wq"
+C-s = ":wq"
 A-q = ":q!"
 C-tab = ":buffer-previous"
 C-S-tab = ":buffer-next"
 C-q = ":buffer-close"
 C-c = ":clipboard-yank"
+F1 = ":lsp-restart"
 
 # https://github.com/helix-editor/helix/discussions/7898
 C.c = "toggle_comments"
