--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -66,7 +66,7 @@ opacity-rule = [
 #################################
 
 vsync = true;               # Reduce screen tearing
-corner-radius = 10;         # Rounded corners on windows  # Make transparency consistent
+# corner-radius = 10;         # Rounded corners on windows  # Make transparency consistent
 
 use-damage = true;
 refresh-rate = 60;
