--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -13,47 +13,47 @@ inactive-opacity = 1.0;
 active-opacity = 1.0;
 frame-opacity = 0.75;      # Transparency for window borders
 
-# Per-application opacity
+# Per-application opacity example (customize your-app-class)
 opacity-rule = [
-   "85:class_g = 'Alacritty'",
- ];
+  "90:class_g = 'your-app-class'"
+];
 
 #################################
 #           Blur                #
 #################################
 
+# Blur settings commented out - enable if you want blur effects
 # blur: {
 #   method = "box";          # Options: "kernel", "box", "gaussian"
 #   size = 10;               # Blur strength
 #   deviation = 5.0;         # Sharpness of blur
 # };
-# blur-background = true;     # Enable background blur
+# blur-background = false;   # Disabled by default
 # blur-background-exclude = [
-#   "class_g = 'i3bar'",      # Don't blur i3bar
-#   "class_g = 'dmenu'",      # Don't blur dmenu
-#   "class_g = 'rofi'",       # Don't blur rofi
+#   "class_g = 'i3bar'",
+#   "class_g = 'dmenu'",
+#   "class_g = 'rofi'",
 # ];
 
 #################################
 #           Fading              #
 #################################
 
-# fading = true;
-# fade-in-step = 0.03;        # Speed of fade-in (lower = faster)
-# fade-out-step = 0.03;       # Speed of fade-out (lower = faster)
-# fade-delta = 10;            # Delay before fading starts
+# fading = false;          # Disabled by default
+# fade-in-step = 0.03;
+# fade-out-step = 0.03;
+# fade-delta = 10;
 
 #################################
 #          Shadows              #
 #################################
 
-# shadow = true;
-# shadow-radius = 12;         # Softness of the shadows
-# shadow-opacity = 0.75;      # Transparency of shadows
-# shadow-offset-x = -10;      # Horizontal shadow shift
-# shadow-offset-y = -10;      # Vertical shadow shift
+shadow = false;            # Disabled shadows for better performance
+# shadow-radius = 12;
+# shadow-opacity = 0.75;
+# shadow-offset-x = -10;
+# shadow-offset-y = -10;
 
-# Disable shadows for some apps
 # shadow-exclude = [
 #   "class_g = 'Alacritty'",
 #   "class_g = 'i3bar'",
@@ -66,20 +66,9 @@ opacity-rule = [
 #################################
 
 vsync = true;               # Reduce screen tearing
-# corner-radius = 10;         # Rounded corners on windows  # Make transparency consistent
-
-use-damage = true;
 refresh-rate = 60;
-vsync = true;
 unredir-if-possible = true;
-
-shadow = false;
-fading = false;
-blur-background = false;
+detect-client-opacity = true;
 
 alpha-step = 0.0;
 use-damage = true;
-
-# Fix overlapping issues
-unredir-if-possible = true;
-detect-client-opacity = true;
