--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,15 +36,16 @@ set -g pane-active-border-style 'fg=color238'
 set -g pane-border-style 'fg=color236'
 
 # keymaps
-bind r source-file ~/.tmux.conf \; display-message "config reloaded"
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-bind d "tmux detach"
+
+bind d detach-client
 bind-key C-n command-prompt -p "New session name:" "new-session -s '%%'"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuuk'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # init tmux proj. manager
