alacritty got new theme clean up and some minor changes and updated the pkglist.txt and .zshrc ty

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -65,8 +65,8 @@ C-r = ":config-reload"
 C-n = ":new"
 C-s = ":wq"
 A-q = ":q!"
-C-tab = ":buffer-previous"
-C-S-tab = ":buffer-next"
+A-w = ":buffer-previous"
+A-e = ":buffer-next"
 C-q = ":buffer-close"
 C-c = ":clipboard-yank"
 F1 = ":lsp-restart"
