--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,11 +29,31 @@ set-option -g status-position top
 set -g status-right '#[fg=color249]#(date +"%I:%M%p %m-%d-%Y")#[default]'
 
 # colors
-set-option -g status-bg color233
-set-option -g status-fg color249
-set -g mode-style "fg=color0,bg=color11"
-set -g pane-active-border-style 'fg=color238'
-set -g pane-border-style 'fg=color236'
+# --- Status Bar ---
+set-option -g status on
+set-option -g status-bg colour0           # background = #000000
+set-option -g status-fg colour7           # foreground = #d8cfc0
+
+# Clock and Date on the right
+set-option -g status-right '#[fg=colour8]#(date +"%I:%M %p %m-%d-%Y")#[default]'
+
+# --- Active/Inactive Window Styling ---
+set-window-option -g window-status-current-style 'fg=colour0,bg=colour11,bold'
+set-window-option -g window-status-style 'fg=colour8,bg=colour0'
+
+# --- Pane Borders ---
+set-option -g pane-border-style 'fg=colour8'               # inactive = #979086
+set-option -g pane-active-border-style 'fg=colour6'        # active = #CC8F8E
+
+# --- Copy Mode ---
+set-option -g mode-style 'fg=colour0,bg=colour11'          # black on BC7181
+
+# --- Message Styling (like prompts) ---
+set-option -g message-style 'bg=colour0,fg=colour7'
+set-option -g message-command-style 'bg=colour0,fg=colour7'
+
+# --- Command Prompt ---
+set-option -g command-style 'bg=colour0,fg=colour7'
 
 # keymaps
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
