--- a/i3/config
+++ b/i3/config
@@ -16,6 +16,8 @@ exec --no-startup-id dex --autostart --environment i3
 
 # Start xss-lock for screen locking
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id ~/.config/fix-mouse.sh
+
 
 # Screenshot on Print key
 bindsym Print exec scrot
@@ -159,28 +161,31 @@ exec --no-startup-id picom --backend xrender -b -f
 # Restore wallpaper with nitrogen
 exec --no-startup-id nitrogen --restore
 
-# Window colors (feel free to customize)
-client.focused #9b8d7f #9b8d7f #000000 #9b8d7f #9b8d7f
-client.focused_inactive #222222 #222222 #9b8d7f #222222 #222222
-client.unfocused #222222 #222222 #9b8d7f #222222 #222222
+# Window border colors
+client.focused          #a35a6e #a35a6e #000000 #d8cfc0
+client.unfocused        #1a1a1a #1a1a1a #000000 #888888
+client.focused_inactive #1a1a1a #1a1a1a #000000 #888888
+client.urgent           #ff5c57 #ff5c57 #000000 #ffffff
 
-# Bar configuration
+# Background
+set_from_resource $bg-color    "#000000"
+set_from_resource $text-color  "#d8cfc0"
+
+# Bar
 bar {
-  status_command i3blocks
-  position bottom
-  separator_symbol "||"
-  colors {
-    background #222222
-    statusline #9b8d7f
-    separator #9b8d7f
+    status_command i3blocks
+    colors {
+        background #000000
+        statusline #d8cfc0
+        separator  #a35a6e
 
-    focused_workspace #9b8d7f #9b8d7f #222222
-    inactive_workspace #222222 #222222 #9b8d7f
-    active_workspace #222222 #222222 #9b8d7f
-    urgent_workspace #222222 #222222 #9b8d7f
-    binding_mode #222222 #222222 #9b8d7f
-  }
+        focused_workspace  #a35a6e #a35a6e #000000
+        active_workspace   #1a1a1a #1a1a1a #d8cfc0
+        inactive_workspace #000000 #000000 #888888
+        urgent_workspace   #ff5c57 #ff5c57 #000000
+    }
 }
+
 
 # Autostart programs (network, pulseaudio, etc.)
 exec --no-startup-id nm-applet
