--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,9 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 # status bar
 set-option -g status-position top
 set -g status-right '#[fg=color249]#(date +"%I:%M%p %m-%d-%Y")#[default]'
+set -g automatic-rename on
+setw -g automatic-rename on
+
 
 # colors
 # --- Status Bar ---
@@ -53,7 +56,7 @@ set-option -g message-style 'bg=colour0,fg=colour7'
 set-option -g message-command-style 'bg=colour0,fg=colour7'
 
 # --- Command Prompt ---
-set-option -g command-style 'bg=colour0,fg=colour7'
+# set-option -g command-style 'bg=colour0,fg=colour7'
 
 # keymaps
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
@@ -61,12 +64,45 @@ bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$
 bind d detach-client
 bind-key C-n command-prompt -p "New session name:" "new-session -s '%%'"
 
+bind d display-menu -T "#[align=centre]λ Systems menu λ" -x C -y C \
+  "λ htop"               h  "display-popup -w 70% -h 60% -E 'htop'" \
+  "λ yazi"               y  "display-popup -w 80% -h 80% -E 'yazi'" \
+  "λ Lazygit"            g  "display-popup -w 85% -h 75% -E 'lazygit'" \
+  "λ Nitrogen"           n  "display-popup -w 85% -h 85% -E 'nitrogen ~/Pictures'" \
+  "λ Git Diffs"          d  "display-popup -w 80% -h 70% -E 'bash -c \"git diff | fzf; read\"'" \
+  "λ Watch Sensors"      T  "display-popup -w 70% -h 80% -E 'watch -n 2 sensors'" \
+  "λ Floating Shell"     x  "display-popup -w 50% -h 50% -E '\$SHELL'" \
+  "λ New Tmux Window"    w  "command-prompt -p 'Window name:' 'new-window -n %%'" \
+  "λ Fuzzy Find Files"   f  "display-popup -w 90% -h 80% -E 'fzf'" \
+  "λ Exit"               q  ""
+
+bind x display-menu -T "#[align=centre]λ Projects Menu λ" -x C -y C \
+  "λ Lazygit"   g  "display-popup -w 85% -h 75% -E 'lazygit'" \
+  "λ Show Logs"     l  "display-popup -w 80% -h 60% -E 'tail -f ./log.txt'" \
+  "λ Open Helix"     e  "display-popup -w 90% -h 90% -E 'helix'" \
+  "λ Build Project"           b   "display-popup -w 50% -h 50% -E 'bash -c \"cmake -S . -B build -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && cmake --build build; echo get out now...; read\"'" \
+  "λ Clean & Rebuild"         B  "display-popup -w 50% -h 50% -E 'bash -c \"rm -rf build && cmake -S . -B build -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && cmake --build build; echo bleh bleh done...; read\"'" \
+  "λ Complie Project"         r  "display-popup -w 90% -h 80% -E 'bash -c \"cd build; echo Press enter to close...; read\"'" \
+  "λ Shell in Project Dir"    x  "display-popup -w 60% -h 60% -E '\$SHELL'" \
+  "λ Exit"                    q  ""
+
+set -g popup-border-lines yes
+set -g popup-border-style 'fg=colour6'
+# set -g popup-style 'bg=colour0,fg=colour7'
+
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'            
+set -g @plugin 'wfxr/tmux-fzf-url' 
+
+set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @yank_selection 'clipboard'
 
 # init tmux proj. manager
 run '~/.tmux/plugins/tpm/tpm'
