fixed a lil bug haha i hate school

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,26 +65,26 @@ bind d detach-client
 bind-key C-n command-prompt -p "New session name:" "new-session -s '%%'"
 
 bind d display-menu -T "#[align=centre]λ Systems menu λ" -x C -y C \
-  "λ htop"               h  "display-popup -w 70% -h 60% -E 'htop'" \
-  "λ yazi"               y  "display-popup -w 80% -h 80% -E 'yazi'" \
-  "λ Lazygit"            g  "display-popup -w 85% -h 75% -E 'lazygit'" \
-  "λ Nitrogen"           n  "display-popup -w 85% -h 85% -E 'nitrogen ~/Pictures'" \
-  "λ Git Diffs"          d  "display-popup -w 80% -h 70% -E 'bash -c \"git diff | fzf; read\"'" \
-  "λ Watch Sensors"      T  "display-popup -w 70% -h 80% -E 'watch -n 2 sensors'" \
-  "λ Floating Shell"     x  "display-popup -w 50% -h 50% -E '\$SHELL'" \
-  "λ New Tmux Window"    w  "command-prompt -p 'Window name:' 'new-window -n %%'" \
-  "λ Fuzzy Find Files"   f  "display-popup -w 90% -h 80% -E 'fzf'" \
-  "λ Exit"               q  ""
+  "λ htop"            h "display-popup -w 70% -h 60% -d '#{pane_current_path}' -E 'htop'" \
+  "λ yazi"            y "display-popup -w 80% -h 80% -d '#{pane_current_path}' -E 'yazi'" \
+  "λ Lazygit"         g "display-popup -w 85% -h 75% -d '#{pane_current_path}' -E 'lazygit'" \
+  "λ Nitrogen"        n "display-popup -w 85% -h 85% -d '#{pane_current_path}' -E 'nitrogen ~/Pictures'" \
+  "λ Git Diffs"       d "display-popup -w 80% -h 70% -d '#{pane_current_path}' -E 'bash -c \"git diff | fzf; read\"'" \
+  "λ Watch Sensors"   T "display-popup -w 70% -h 80% -d '#{pane_current_path}' -E 'watch -n 2 sensors'" \
+  "λ Floating Shell"  x "display-popup -w 50% -h 50% -d '#{pane_current_path}' -E '\$SHELL'" \
+  "λ New Tmux Window" w "command-prompt -p 'Window name:' 'new-window -n %%'" \
+  "λ Fuzzy Find"      f "display-popup -w 90% -h 80% -d '#{pane_current_path}' -E 'fzf'" \
+  "λ Exit"            q ""
 
 bind x display-menu -T "#[align=centre]λ Projects Menu λ" -x C -y C \
-  "λ Lazygit"   g  "display-popup -w 85% -h 75% -E 'lazygit'" \
-  "λ Show Logs"     l  "display-popup -w 80% -h 60% -E 'tail -f ./log.txt'" \
-  "λ Open Helix"     e  "display-popup -w 90% -h 90% -E 'helix'" \
-  "λ Build Project"           b   "display-popup -w 50% -h 50% -E 'bash -c \"cmake -S . -B build -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && cmake --build build; echo get out now...; read\"'" \
-  "λ Clean & Rebuild"         B  "display-popup -w 50% -h 50% -E 'bash -c \"rm -rf build && cmake -S . -B build -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && cmake --build build; echo bleh bleh done...; read\"'" \
-  "λ Complie Project"         r  "display-popup -w 90% -h 80% -E 'bash -c \"cd build; echo Press enter to close...; read\"'" \
-  "λ Shell in Project Dir"    x  "display-popup -w 60% -h 60% -E '\$SHELL'" \
-  "λ Exit"                    q  ""
+  "λ Lazygit"         g "display-popup -w 85% -h 75% -d '#{pane_current_path}' -E 'lazygit'" \
+  "λ Show Logs"       l "display-popup -w 80% -h 60% -d '#{pane_current_path}' -E 'tail -f ./log.txt'" \
+  "λ Open Helix"      e "display-popup -w 90% -h 90% -d '#{pane_current_path}' -E 'helix'" \
+  "λ Build Project"   b "display-popup -w 50% -h 50% -d '#{pane_current_path}' -E 'bash -c \"cmake -S . -B build -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && cmake --build build; echo get out now...; read\"'" \
+  "λ Clean & Rebuild" B "display-popup -w 50% -h 50% -d '#{pane_current_path}' -E 'bash -c \"rm -rf build && cmake -S . -B build -G Ninja -DCMAKE_EXPORT_COMPILE_COMMANDS=ON && cmake --build build; echo bleh bleh done...; read\"'" \
+  "λ Compile Project" r "display-popup -w 90% -h 80% -d '#{pane_current_path}' -E 'bash -c \"cd build; echo Press enter to close...; read\"'" \
+  "λ Shell Here"      x "display-popup -w 60% -h 60% -d '#{pane_current_path}' -E '\$SHELL'" \
+  "λ Exit"            q ""
 
 set -g popup-border-lines yes
 set -g popup-border-style 'fg=colour6'
